fix: Se depuran errores en plantillas pdf y se crea controlador como puente para consulta a AdminMid solucionando novedad suspension
