# routers/commentsRouter_controllers.go
@@ -52,6 +52,15 @@ func init() {
             Filters: nil,
             Params: nil})
 
+    beego.GlobalControllerRouter["github.com/udistrital/novedades_mid/controllers:CambioEstadoContratoValidoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/novedades_mid/controllers:CambioEstadoContratoValidoController"],
+        beego.ControllerComments{
+            Method: "ValidarCambioEstado",
+            Router: "/",
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
     beego.GlobalControllerRouter["github.com/udistrital/novedades_mid/controllers:GestorDocumentalController"] = append(beego.GlobalControllerRouter["github.com/udistrital/novedades_mid/controllers:GestorDocumentalController"],
         beego.ControllerComments{
             Method: "Post",
